--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -42,7 +42,7 @@
         <session-timeout>15</session-timeout>
     </session-config>
     
-<!--    <welcome-file-list>-->
-<!--        <welcome-file>/WEB-INF/jsp/homePage.jsp</welcome-file>-->
-<!--    </welcome-file-list>-->
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/jsp/homePage.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
